<resources>
    <string name="app_name">Goodness Groceries</string>
    <string name="client_id">Pall Center client ID</string>
    <string name="user_id">User ID</string>
    <string name="general_error">An error has occurred</string>
    <string name="general_error_try_again">An error has occurred. Please try again later.</string>
    <string name="network_error">Please check your internet connection and try again later.</string>
    <string name="no_products_found">Sorry, no products found</string>
    <string name="ok">OK</string>
    <string name="next">Continue</string>
    <string name="refresh">Refresh</string>
    <string name="or">or</string>
    <string name="loading">Loading..</string>
    <string name="nodata">No Data!</string>
    <string name="permissions_modal_camera_description">Goodness Groceries needs access to your camera to scan QR-codes.</string>
    <string name="camera_not_allowed">Goodness Groceries was not granted access to your camera to scan QR-codes. Please change that in settings. Thank you.</string>
    <string name="scan_low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="welcome_page_1_title">Welcome to Goodness Groceries!</string>
    <string name="welcome_page_1_text">This app will allow you to compare the ethical and eco-responsible characteristics of selected food products available in Pall Center whilst you shop.</string>
    <string name="welcome_page_3_title">The four sustainability themes</string>
    <string name="welcome_page_3_text">Continue to personalise your App experience.</string>
    <string name="welcome_page_4_title">What is closest to your heart when grocery shopping? (up to 4)</string>
    <string name="welcome_page_5_title">What categories of products do you tend to buy? (up to 4)</string>
    <string name="welcome_page_notifications_text">Please authorise notifications from Goodness Groceries in order to be informed once your account will have been verified, and to receive feedback forms regarding products and the App.</string>
    <string name="welcome_page_notifications_title">Notifications</string>
    <string name="welcome_page_6_title">Scan a product</string>
    <string name="welcome_page_6_text">Use your smartphone while you shop to scan the QR codes on a selection of products.</string>
    <string name="welcome_page_7_title">See indicators that matter to you</string>
    <string name="welcome_page_7_text">Each product will be presented with its relevant sustainability indicators. Read more about each indicator by clicking on them, and make your purchases based on the information available.</string>
    <string name="welcome_page_8_title">Before you start</string>
    <string name="welcome_page_8_text1">Thank you for your interest in participating in the Goodness Groceries App and study!</string>
    <string name="welcome_page_8_text2">To register for the study and to use the app, click the ‘Let’s Go’ button. When you completed the registration process on our website, come back here, tick the box below, and then click the button again to continue. </string>
    <string name="welcome_page_8_checkbox">I have completed the two registration steps.</string>
    <string name="welcome_page_8_button">Let\'s go!</string>
    <string name="welcome_page_interest">Thanks for your interest to participate to the app and for the Goodness Groceries study!</string>
    <string name="accountconsideration_title">We are validating your registration</string>
    <string name="accountconsideration_text1">You will receive a notification when we have validated your informed consent form.</string>
    <string name="accountconsideration_text2">If you did not read the study information and sign the informed consent on our website, return to the previous page by clicking on the button below. </string>
    <string name="accountconsideration_button">Return to previous page</string>
    <string name="observationphase_title">Your registration has been approved</string>
    <string name="observationphase_text1">You are now participating in the study.</string>
    <string name="observationphase_text2">Shop as normal using your Pall Center customer card for the next few weeks.</string>
    <string name="observationphase_text3">You will be able to fully explore the four sustainability themes of the App in</string>
    <string name="observationphase_text4">days.</string>
    <string name="id_digit_alert">The client ID must have exactly 13 digits</string>
    <string name="scan_directly">Read the User Agreement</string>
    <string name="no_customer_card">I read and approve User Agreement</string>
    <string name="moreinfo">More info…</string>
    <string name="language">Language</string>
    <string name="language_change_later">You can change the language in the settings later.</string>
    <string name="menu_home">Home</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_help">Help</string>
    <string name="help_page_button_1">Indicator definitions</string>
    <string name="help_page_button_2">Goodness Groceries homepage</string>
    <string name="help_page_button_3">Help</string>
    <string name="help_page_button_4">Contact us</string>
    <string name="help_page_button_5">Product category definitions</string>
    <string name="help_page_button_6">Symbols glossary</string>
    <string name="help_attributed">The indicator is attributed to the product</string>
    <string name="help_not_attributed">The indicator is not attributed to the product</string>
    <string name="help_not_applicable">The indicator is not applicable to the product</string>
    <string name="menu_product_categories">Categories</string>
    <string name="menu_products">Products</string>
    <string name="feedback_page_text">You recently bought the following product, which indicators led you to choose it?</string>
    <string name="price">Price</string>
    <string name="other_reason">Other reason…</string>
    <string name="feedback_thank_you">Thank you!</string>
    <string name="feedback_thank_you_message">Thank you for reviewing the product(s) you purchased. Your feedback allows the research team to understand your food choices and to find out how grocery shopping can be made more sustainable.</string>
    <string name="compare_button">Compare</string>
    <string name="product">Product</string>
    <string name="product_not_found">Product not found</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="provider">Company</string>
    <string name="indicators">Indicators</string>
    <string name="show_less">Show less</string>
    <string name="show_more">Show more</string>
    <string name="similar_products">Similar products</string>
    <string name="products">Products</string>
    <string name="review_products">Review products</string>
    <string name="feedback">Give my feedback</string>
    <string name="feedback_and_win">Give my feedback and win 150€</string>
    <string name="settings">Settings</string>
    <string name="NOT_APPLICABLE">Not applicable</string>
    <string name="NO_EVIDENCE">No evidence</string>
    <string name="PRODUCT_CATEGORY_IMPORTED_CONVENTIONAL">Imported conventional</string>
    <string name="PRODUCT_CATEGORY_IMPORTED_CONVENTIONAL_DESC">\'Imported products\' have entirely been produced or processed outside of Luxembourg. They travel by air, sea or land to Luxembourgish wholesale and retail markets. The distance travelled is referred to as \'food miles\'. \'Conventional products\' are produced, distributed and marketed according to any other criteria than the ones of organic methods, following general standards laid out by EU and the producing country’s legislation. They may have additional criteria defined in specific programmes and labels.</string>
    <string name="PRODUCT_CATEGORY_IMPORTED_ORGANIC">Imported organic</string>
    <string name="PRODUCT_CATEGORY_IMPORTED_ORGANIC_DESC">\'Imported products\' have entirely been produced or processed outside of Luxembourg. They travel by air, sea or land to Luxembourgish wholesale and retail markets. The distance travelled is referred to as \'food miles\'. \'Organic products\' are produced, distributed and marketed according to the criteria of public organic certification, and must comply at least with the legislation of the importing country defining the use of pesticides and fertilisers, animal welfare standards and considerations for biodiversity etc.  Some products may have voluntarily additional criteria defined by private organic certifications.</string>
    <string name="PRODUCT_CATEGORY_LOCAL_CONVENTIONAL">Local conventional</string>
    <string name="PRODUCT_CATEGORY_LOCAL_CONVENTIONAL_DESC">\'Local products\' are produced or processed in Luxembourg. They can be made from nationally produced ingredients, imported ones or from a mixture of both. \'Conventional products\' are produced, distributed and marketed according to any other criteria than the ones of organic methods, following general standards laid out by EU and Luxembourgish legislation. They may have additional criteria defined in specific programmes and labels.</string>
    <string name="PRODUCT_CATEGORY_LOCAL_ORGANIC">Local organic</string>
    <string name="PRODUCT_CATEGORY_LOCAL_ORGANIC_DESC">\'Local products\' are produced or processed in Luxembourg. They can be made from nationally produced ingredients, imported ones or from a mixture of both. \'Organic products\' are produced, distributed and marketed according to the criteria of public organic certification, and must comply at least with EU organic legislation defining the use of pesticides and fertilisers, animal welfare standards and considerations for biodiversity etc.  Some products may have voluntarily additional criteria defined by private organic certifications.</string>
    <string name="PRODUCT_CATEGORY_ANY">Any category</string>
    <string name="PRODUCT_CATEGORY_ANY_DESC">Products from any category</string>
    <string name="PRODUCT_CATEGORY_IMPORTED_DESC">\'Imported products\' have entirely been produced or processed outside of Luxembourg. They travel by air, sea or land to Luxembourgish wholesale and retail markets. The distance travelled is referred to as \'food miles\'.</string>
    <string name="PRODUCT_CATEGORY_CONVENTIONAL_DESC">\'Conventional products\' are produced, distributed and marketed according to any other criteria than the ones of organic methods, following general standards laid out by EU and the producing country’s legislation. They may have additional criteria defined in specific programmes and labels.</string>
    <string name="PRODUCT_CATEGORY_ORGANIC_DESC">\'Organic products\' are produced, distributed and marketed according to the criteria of public organic certification, and must comply at least with EU organic legislation defining the use of pesticides and fertilisers, animal welfare standards and considerations for biodiversity etc.  Some products may have voluntarily additional criteria defined by private organic certifications.</string>
    <string name="PRODUCT_CATEGORY_LOCAL_DESC">\'Local products\' are produced or processed in Luxembourg. They can be made from nationally produced ingredients, imported ones or from a mixture of both.</string>
    <string name="IND_CAT_ECONOMIC_DESCRIPTION">All workers in the food sector have present and future financial security. Society prospers through their food production activities, building both financial and social gains. More local, circular and solidarity-based food production is fostered.</string>
    <string name="IND_CAT_ECONOMIC_NAME">Economic well-being</string>
</resources>