<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="lu.uni.bicslab.greenbot.android.ui.fragment.indicator_category.IndicatorCategoryFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_items_main_layout">
        <action
                android:id="@+id/goto_prod_cat"
                app:destination="@id/productCategoryFragment"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
            android:id="@+id/fragment_indicator"
            android:name="lu.uni.bicslab.greenbot.android.ui.fragment.indicator.IndicatorFragment"
            android:label="@string/menu_products" />
    <fragment
            android:id="@+id/productCategoryFragment"
            android:name="lu.uni.bicslab.greenbot.android.ui.fragment.product_category.ProductCategoryFragment"
            android:label="@string/menu_product_categories">
        <action
                android:id="@+id/goto_indicator"
                app:destination="@id/fragment_indicator"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_in_left"
                app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <action
            android:id="@+id/action_global_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/profileFragment"
            app:popUpToInclusive="true" />
    <fragment
            android:id="@+id/profileFragment"
            android:name="lu.uni.bicslab.greenbot.android.ui.fragment.profile.ProfileFragment"
            android:label="@string/menu_profile" />
    <action
            android:id="@+id/action_global_profileFragment"
            app:destination="@id/profileFragment"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    <fragment
            android:id="@+id/helpFragment"
            android:name="lu.uni.bicslab.greenbot.android.ui.fragment.help.HelpFragment"
            android:label="@string/menu_help" />
    <action
            android:id="@+id/action_global_helpFragment"
            app:destination="@id/helpFragment"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />

</navigation>