<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:contextClickable="false"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <ImageView
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_width"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/gg_logo_1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19dp"
        android:text="@string/observationphase_title"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_observation"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/observationphase_text1"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/observationphase_text2"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/observationphase_text3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_days"
        android:textSize="36dp"
        android:text="@string/observationphase_text4"
        android:textColor="@color/black"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"/>

    <Button
        style="@style/BetterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_firsttime2_label2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="60dp"
        android:text="@string/refresh"
        android:layout_weight="0"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="refreshStatus" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:paddingTop="1dp"
        android:paddingBottom="10dp">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_width"
            android:layout_weight="1"
            app:srcCompat="@drawable/uni_icon" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_width"
            android:layout_weight="1"
            app:srcCompat="@drawable/pall_center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:id="@+id/help_home_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/help_page_button_2"
            android:textColor="@color/black"
            android:textColorLink="@color/black" />

        <TextView
            android:id="@+id/help_contact_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/help_page_button_4"
            android:textColor="@color/black"
            android:textColorLink="@color/black" />


    </LinearLayout>

</LinearLayout>