<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:contextClickable="false"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_width"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/gg_logo_1" />

    <TextView
        android:id="@+id/help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome_page_1_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_width"
            android:layout_weight="1"
            app:srcCompat="@drawable/uni_icon" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="@dimen/icon_width"
            android:layout_weight="1"
            app:srcCompat="@drawable/pall_center" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/helpmenu_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_help"
            android:textAllCaps="true" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/help_indicator_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/help_indicators_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_page_button_1"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/help_indicators_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/help_indicators_text"
                app:srcCompat="@drawable/arrow_right" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/help_category_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/help_category_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_page_button_5"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/help_category_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/help_category_text"
                app:srcCompat="@drawable/arrow_right" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/help_symbols_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/help_symbols_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_page_button_6"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/help_symbols_icon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/help_symbols_text"
                app:srcCompat="@drawable/arrow_right" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/help_home_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_page_button_2"
            android:textColor="@color/black"
            android:textColorLink="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/help_help_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_page_button_3"
            android:textColor="@color/black"
            android:textColorLink="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/help_contact_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_page_button_4"
            android:textColor="@color/black"
            android:textColorLink="@color/black" />

    </LinearLayout>

</LinearLayout>