<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="16dp"
    android:layout_marginStart="16dp"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/desc_padding">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/desc_padding"
            android:text="✔  "
            android:textColor="#47a216"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_attributed"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/desc_padding">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/desc_padding"
            android:text="Ø  "
            android:textColor="#ff0000"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_not_attributed"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/desc_padding">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/desc_padding"
            android:text="n/a"
            android:textColor="@color/gray_dark"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_not_applicable"
            />

    </LinearLayout>

</LinearLayout>